# Logic-of-Hashira

./: .gitattributes  .gitignore  AGENTS.md  README.md  analysis_options.yaml  pubspec.yaml  skills-lock.json  健身记录app.md  重点是三件事.md
.codebuddy/: CODEBUDDY.md
.codebuddy/agents/: Android 开发.md  Android开发.md  Karpathy.md
.codex/: config.toml  hooks.json
.github/: ANDROID_WORKFLOWS.md  ARCHITECTURE.md  WORKFLOWS.md  pull_request_template.md
.trellis/: .template-hashes.json  workflow.md
android/: build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/src/main/cpp/: CMakeLists.txt  fetch_ncnn.ps1  fetch_ncnn.sh  food_segmenter.cpp  png_writer.h
docs/: 20260528阶段性能分析.md  CODE_WIKI.md  Calorie Snap (快照卡路里)-产品需求文档 (PRD).md  Calorie Snap UI 流程设计重构.md  Calorie Snap V1.0-MVP开发任务清单.md  Calorie Snap V1.0-埋点表.md  Calorie Snap V1.0-开发排期看板.md  Calorie Snap V1.0-接口字段清单.md  Calorie Snap V1.0-页面状态机.md  Calorie Snap V1.0产品级PRD-整合版.md  Calorie_Snap_原生层开发执行方案.md  Fake-AI-Coach埋点.md  HOME_MUSCLE_MAP_CHANGE_REFERENCE.md  TRELLIS_TUTORIAL.md  V1.0产品级PRD.md  system-architecture.md  （全云端流水线 + 本地 UI 隔离）是最符合现代 DevOps 思维.md
lib/: firebase_options.dart  firebase_options.example.dart  main.dart
lib/core/: theme.dart
scripts/: deploy-debug.sh  export_yolo_ncnn.py  export_yolov8_seg_ncnn.py
shaders/: disintegrate_bg.frag  edge_disintegrate.frag
test/: coach_session_test.dart  edge_effect_intensity_test.dart  mag_bitplane_test.dart  meal_repository_test.dart  ncnn_recognizer_test.dart  sprint5_validation_test.dart  widget_test.dart
web/: index.html  manifest.json
(+194 files in other folders)
